Change log
==========

1.1 (unreleased)
----------------

1.0 (2010-07-23)
----------------
- Initial release